kubernetes/apps/network/singularity/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: singularity
spec:
  type: ExternalName
  externalName: singularity.milkyway
