kubernetes/apps/network/singularity/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: singularity
spec:
  hostnames:
    - singularity.${DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: singularity
          port: 5001
      matches:
        - path:
            type: PathPrefix
            value: /
